--- a/app/src/main/res/layout/fragment_plant.xml
+++ b/app/src/main/res/layout/fragment_plant.xml
@@ -25,5 +25,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:titleTextColor="#FFFFFF" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/plantList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layoutManager="LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_intro" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
