--- a/app/src/main/res/layout/item_plant_list.xml
+++ b/app/src/main/res/layout/item_plant_list.xml
@@ -2,11 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
         <variable
             name="vm"
-            type="com.vincentwang.zoo.ui.intro.IntroItemVM" />
+            type="com.vincentwang.zoo.ui.plant.PlantListItemVM" />
     </data>
 
     <androidx.cardview.widget.CardView
