--- a/app/src/main/res/layout/item_plant_list.xml
+++ b/app/src/main/res/layout/item_plant_list.xml
@@ -30,7 +30,7 @@
                 android:layout_width="100dp"
                 android:layout_height="0dp"
                 app:src="@{vm.url}"
-                android:transitionName="image"
+                android:transitionName="@{vm.url}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
